Static analysis pass over the code base
Ran the IntelliJ IDEA code analysis and applied selected changes.